force-app/main/default/objects/Scheduler_Fields_V2__mdt/Scheduler_Fields_V2__mdt.object-meta.xml
<CustomObject>
    <label>Scheduler Fields V2</label>
    <pluralLabel>Scheduler Fields V2</pluralLabel>
</CustomObject>