force-app/main/default/objects/Scheduler_Fields_V2__mdt/fields/Event_End_Date_API_Field__c.field-meta.xml
<CustomField>
    <fullName>Event_End_Date_API_Field__c</fullName>
    <label>Event End Date API Field</label>
    <type>TextArea</type>
</CustomField>