force-app/main/default/objects/Scheduler_Fields_V2__mdt/fields/Event_Id_API_Field__c.field-meta.xml
<CustomField>
    <fullName>Event_Id_API_Field__c</fullName>
    <label>Event Id API Field</label>
    <type>TextArea</type>
</CustomField>