force-app/main/default/objects/Scheduler_Fields_V2__mdt/fields/Event_Parent_Resource_API_Field__c.field-meta.xml
<CustomField>
    <fullName>Event_Parent_Resource_API_Field__c</fullName>
    <label>Event Parent Resource API Field</label>
    <type>TextArea</type>
</CustomField>