force-app/main/default/objects/Scheduler_Fields_V2__mdt/fields/Max_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Max_End_Date__c</fullName>
    <label>Max End Date</label>
    <type>Date</type>
</CustomField>