force-app/main/default/objects/Scheduler_Fields_V2__mdt/fields/Min_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Min_Start_Date__c</fullName>
    <label>Min Start Date</label>
    <type>Date</type>
</CustomField>