force-app/main/default/objects/Scheduler_Fields_V2__mdt/fields/Resource_Color__c.field-meta.xml
<CustomField>
    <fullName>Resource_Color__c</fullName>
    <label>Resource Color</label>
    <type>TextArea</type>
</CustomField>