force-app/main/default/objects/Scheduler_Fields_V2__mdt/fields/Resource_Hidden_Columns_API_Fields__c.field-meta.xml
<CustomField>
    <fullName>Resource_Hidden_Columns_API_Fields__c</fullName>
    <label>Resource Hidden Columns API Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>