force-app/main/default/objects/Scheduler_Fields_V2__mdt/fields/Resource_Hotel_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Resource_Hotel_API_Name__c</fullName>
    <label>Resource Hotel API Name</label>
    <type>TextArea</type>
</CustomField>