force-app/main/default/objects/Scheduler_Fields_V2__mdt/fields/Resource_Icon__c.field-meta.xml
<CustomField>
    <fullName>Resource_Icon__c</fullName>
    <label>Resource Icon</label>
    <type>TextArea</type>
</CustomField>