force-app/main/default/objects/Scheduler_Fields_V2__mdt/fields/Resource_Icon_API_Field__c.field-meta.xml
<CustomField>
    <fullName>Resource_Icon_API_Field__c</fullName>
    <label>Resource Icon API Field</label>
    <type>TextArea</type>
</CustomField>