force-app/main/default/objects/Scheduler_Fields_V2__mdt/fields/Resource_Image_API_FIeld__c.field-meta.xml
<CustomField>
    <fullName>Resource_Image_API_FIeld__c</fullName>
    <label>Resource Image API FIeld</label>
    <type>TextArea</type>
</CustomField>