force-app/main/default/objects/Scheduler_Fields_V2__mdt/fields/Resource_Maintenance_Resource_API_Field__c.field-meta.xml
<CustomField>
    <fullName>Resource_Maintenance_Resource_API_Field__c</fullName>
    <label>Resource Maintenance Resource API Field</label>
    <type>TextArea</type>
</CustomField>