force-app/main/default/objects/Scheduler_Fields_V2__mdt/fields/Time_Range_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Time_Range_API_Name__c</fullName>
    <label>Time Range API Name</label>
    <type>TextArea</type>
</CustomField>