force-app/main/default/objects/Scheduler_Fields_V2__mdt/fields/Time_Range_End_Date_API_Field__c.field-meta.xml
<CustomField>
    <fullName>Time_Range_End_Date_API_Field__c</fullName>
    <label>Time Range End Date API Field</label>
    <type>TextArea</type>
</CustomField>